# fabric_defect_detetion_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  application.py  docker-compose.yml  pyproject.toml
domain/: __init__.py  yolo_11l_detector.py
domain/model/: __init__.py  bounding_box.py  defect_labels.py  prediction.py  prediction_payload.py
utils/: __init__.py  generate_heatmap.py  logger.py  save_annotation.py  save_image.py
